Bug 1528188 - Get the HttpChannelParentListener via the parent r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D20184