netwerk/protocol/http/HttpChannelParent.h
@@ -129,6 +129,8 @@ class HttpChannelParent final : public nsIInterfaceRequestor,
   // child channel.
   void CancelChildCrossProcessRedirect();
 
+  already_AddRefed<HttpChannelParentListener> GetParentListener();
+
  protected:
   // used to connect redirected-to channel in parent with just created
   // ChildChannel.  Used during redirects.
